@@ -1,3 +1,5 @@
 *.py?
 plone.dexterity.egg-info/
 *.mo
+.project
+.pydevproject
